New feature: parameters as distribution for cognitive capcity and Link minimum

--- a/notebooks/last_analysis.ipynb
+++ b/notebooks/last_analysis.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "2979b0c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users/Matthieu/Documents/_Travail/Stages/Stage M1/Workspace/cooperation_emergence\\graph.py:286: SyntaxWarning: invalid escape sequence '\\i'\n",
+      "  and S \\in [0, 10]\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(r\"C:/Users/Matthieu/Documents/_Travail/Stages/Stage M1/Workspace/cooperation_emergence/\")\n",
@@ -31,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "2830fbe4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = r\"../out/last/SITH_E3O2P21R12T17_Empty_L10_C90_S50_T0.25_444675.h5\"\n",
+    "file = r\"../out/test/SITH_E3O2P21R12T17_Empty_L10_C200_S50_T0.25_444675.h5\"\n",
     "net = Network()\n",
     "net.reload_with_hdf5(file)\n",
     "\n",
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "131b37c1",
    "metadata": {},
    "outputs": [
@@ -61,14 +70,14 @@
      "output_type": "stream",
      "text": [
       "Number of interaction:  444675\n",
-      "Asymmetry rate:  0.9285714285714286\n",
-      "Individual asymmetry rate:  0.06\n",
-      "Out preserving ind. asymmetry:  0.06\n",
-      "Saturation rate:  0.74\n",
-      "Mean number of link per agent:  1.8\n",
-      "Standard deviation number of link per agent:  7.745966692414834\n",
+      "Asymmetry rate:  0.8093385214007782\n",
+      "Individual asymmetry rate:  0.16999999999999998\n",
+      "Out preserving ind. asymmetry:  0.22\n",
+      "Saturation rate:  0.0\n",
+      "Mean number of link per agent:  6.12\n",
+      "Standard deviation number of link per agent:  19.93188400528159\n",
       "Mean number of interaction per link:  363.0\n",
-      "Transitiviy rate:  0.0005102040816326531\n"
+      "Transitiviy rate:  0.012755102040816327\n"
      ]
     }
    ],
@@ -92,27 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "1a66ae46",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users/Matthieu/Documents/_Travail/Stages/Stage M1/Workspace/cooperation_emergence\\analysis.py:173: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  popt, _ = curve_fit(model, t_norm, xhi)\n"
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'float' and 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m local_dt = Dataset(\u001b[33m\"\u001b[39m\u001b[33mlocal\u001b[39m\u001b[33m\"\u001b[39m, inter)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mlocal_dt\u001b[49m\u001b[43m.\u001b[49m\u001b[43minit_with_network\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnet\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mC:\\Users/Matthieu/Documents/_Travail/Stages/Stage M1/Workspace/cooperation_emergence\\dataset.py:42\u001b[39m, in \u001b[36mDataset.init_with_network\u001b[39m\u001b[34m(self, net)\u001b[39m\n\u001b[32m     40\u001b[39m i_data[\u001b[33m\"\u001b[39m\u001b[33mPhenotype\u001b[39m\u001b[33m\"\u001b[39m] = vertices[i].phenotype\n\u001b[32m     41\u001b[39m \u001b[38;5;66;03m# Load\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m i_data[\u001b[33m\"\u001b[39m\u001b[33mLoad\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mvertices\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43mnet\u001b[49m\u001b[43m.\u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mCognitive capacity\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     43\u001b[39m \u001b[38;5;66;03m# Outdegree\u001b[39;00m\n\u001b[32m     44\u001b[39m i_data[\u001b[33m\"\u001b[39m\u001b[33mOut degree\u001b[39m\u001b[33m\"\u001b[39m] = out_degrees[index]\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for /: 'float' and 'dict'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<dataset.Dataset at 0x1a509204f20>"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
